--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizApp">
         <activity
-            android:name=".playQuiz"
+            android:name=".FailActivity"
+            android:exported="true" />
+        <activity
+            android:name=".PlayActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
