--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizApp">
         <activity
+            android:name=".WinActivity"
+            android:exported="true" />
+        <activity
             android:name=".FailActivity"
             android:exported="true" />
         <activity
